<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="viewModel" type="com.nuvem.nuvemshopweather.presentation.weather.WeatherViewModel"/>
        <import type="android.view.View"/>
    </data>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            tools:context=".presentation.weather.WeatherActivity">

        <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinnerCities"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:entries="@{viewModel.cities}"
                android:selectedItemPosition="@={viewModel.citySelectionIndex}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

        </android.support.v7.widget.AppCompatSpinner>

        <TextView
                android:id="@+id/text_temp_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="20dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/temperature"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/text_temp_value"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/text_description_label"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintVertical_bias="1"
                app:layout_constraintHorizontal_bias="0"
                />

        <TextView
                android:id="@+id/text_temp_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@{viewModel.weatherResponse.data.weatherDetail.temp.toString()}"
                app:layout_constraintLeft_toRightOf="@id/text_temp_label"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/text_temp_label"
                app:layout_constraintBottom_toBottomOf="@id/text_temp_label"
                app:layout_constraintHorizontal_chainStyle="packed"
        />

        <TextView
                android:id="@+id/text_description_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/description"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/text_description_value"
                app:layout_constraintTop_toBottomOf="@id/text_temp_label"
                app:layout_constraintBottom_toTopOf="@id/text_temp_max_label"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintVertical_bias="1"
                app:layout_constraintHorizontal_bias="0"
        />

        <TextView
                android:id="@+id/text_description_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@{viewModel.weatherResponse.data.weatherDescriptionDetailList.get(0).description}"
                app:layout_constraintLeft_toRightOf="@id/text_description_label"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/text_description_label"
                app:layout_constraintBottom_toBottomOf="@id/text_description_label"
                app:layout_constraintHorizontal_chainStyle="packed"
        />

        <TextView
                android:id="@+id/text_temp_max_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/max_temperature"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/text_temp_max_value"
                app:layout_constraintTop_toBottomOf="@id/text_description_label"
                app:layout_constraintBottom_toTopOf="@id/text_temp_min_label"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintVertical_bias="1"
                app:layout_constraintHorizontal_bias="0"
        />

        <TextView
                android:id="@+id/text_temp_max_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@{viewModel.weatherResponse.data.weatherDetail.maxTemp.toString()}"
                app:layout_constraintLeft_toRightOf="@id/text_temp_max_label"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/text_temp_max_label"
                app:layout_constraintBottom_toBottomOf="@id/text_temp_max_label"
                app:layout_constraintHorizontal_chainStyle="packed"
        />

        <TextView
                android:id="@+id/text_temp_min_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/min_temperature"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/text_temp_min_value"
                app:layout_constraintTop_toBottomOf="@id/text_temp_max_label"
                app:layout_constraintBottom_toTopOf="@id/text_weather_condition_label"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintVertical_bias="1"
                app:layout_constraintHorizontal_bias="0"
        />

        <TextView
                android:id="@+id/text_temp_min_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@{viewModel.weatherResponse.data.weatherDetail.minTemp.toString()}"
                app:layout_constraintLeft_toRightOf="@id/text_temp_min_label"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/text_temp_min_label"
                app:layout_constraintBottom_toBottomOf="@id/text_temp_min_label"
                app:layout_constraintHorizontal_chainStyle="packed"
        />

        <TextView
                android:id="@+id/text_weather_condition_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/weather_condition"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/text_weather_condition_value"
                app:layout_constraintTop_toBottomOf="@id/text_temp_min_label"
                app:layout_constraintBottom_toTopOf="@id/button_details"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintVertical_bias="1"
                app:layout_constraintHorizontal_bias="0"
        />

        <TextView
                android:id="@+id/text_weather_condition_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@{viewModel.weatherResponse.data.weatherDescriptionDetailList.get(0).condition}"
                app:layout_constraintLeft_toRightOf="@id/text_weather_condition_label"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/text_weather_condition_label"
                app:layout_constraintBottom_toBottomOf="@id/text_weather_condition_label"
                app:layout_constraintHorizontal_chainStyle="packed"
        />

        <Button
                android:id="@+id/button_details"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/details"
                android:layout_marginBottom="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_weather_condition_label"
                app:layout_constraintBottom_toBottomOf="parent"
                android:onClick="@{(v) -> viewModel.clickDetails()}"
        />

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@android:color/white"
                android:visibility="@{viewModel.weatherResponse.isError() || viewModel.weatherResponse.isLoading() ? View.VISIBLE : View.GONE}"
                app:layout_constraintTop_toTopOf="@id/text_temp_label"
                app:layout_constraintBottom_toBottomOf="parent">

                <ProgressBar
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:indeterminate="true"
                        android:visibility="@{viewModel.weatherResponse.isLoading() ? View.VISIBLE : View.GONE}"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="@{viewModel.weatherResponse.isError() ? View.VISIBLE : View.GONE}"
                        android:text="@{viewModel.weatherResponse.message}"
                        android:textSize="20sp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</layout>